# audiopc_ffi

./: .gitignore  CHANGELOG.md  README.md  ffigen.yaml  pubspec.yaml
android/: build.gradle  settings.gradle
android/src/main/: AndroidManifest.xml
example/: README.md  pubspec.yaml
example/android/app/: build.gradle.kts
example/android/app/src/main/: AndroidManifest.xml
example/ios/Runner/: Info.plist
example/ios/Runner.xcodeproj/: project.pbxproj
example/lib/: filters.dart  main.dart
example/linux/: CMakeLists.txt
example/linux/flutter/: generated_plugins.cmake
example/linux/runner/: my_application.cc
example/macos/Runner.xcodeproj/: project.pbxproj
example/macos/Runner/Configs/: AppInfo.xcconfig
example/windows/: CMakeLists.txt
example/windows/flutter/: generated_plugins.cmake
example/windows/runner/: Runner.rc  main.cpp
hook/: build.dart
ios/: audiopc.podspec  audiopc_native.podspec
ios/Classes/: audiopc.c
lib/: audiopc.g.dart  audiopc_ffi.dart  audiopc_ffi.g.dart  audiopc_native.dart  audiopc_native_bindings_generated.dart
lib/src/: audiopc_native.dart
linux/: CMakeLists.txt
macos/: audiopc_native.podspec
macos/Classes/: audiopc_ffi.c
rust/: Cargo.toml  build.rs  rust-toolchain.toml
rust/src/: device.rs  effects.rs  engine.rs  enums.rs  error.rs  events.rs  ffi.rs  http_stream.rs  lib.rs  log.rs  player_state.rs  processor.rs  source.rs
src/: CMakeLists.txt  audiopc_ffi.c  audiopc_ffi.h
test/: audiopc_ffi_test.dart  audiopc_test.dart
windows/: CMakeLists.txt
(+4 files in other folders)
